<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="active_login_sessions">Active login sessions</string>
    <string name="change_passphrase">Change passphrase</string>
    <string name="change_password">Change password</string>
    <string name="new_password">New password</string>
    <string name="old_password">Old Password</string>
    <string name="repeat_new_password">Repeat new password</string>
    <string name="edit_profile">Edit profile</string>
    <string name="user_id">User ID</string>
    <string name="manage_subscription">Manage subscription</string>
    <string name="you_don_t_have_any_active_subscriptions">You don\'t have any active subscriptions</string>
    <string name="status_active">Status: Active</string>
    <string name="manage_on_google_play">Manage on Google Play</string>
    <string name="verify_session">Verify session</string>
    <string name="scan_qr_code">Scan QR code</string>
    <string name="reset_keys">Reset keys</string>
    <string name="verify">Verify</string>
    <string name="media_storage">Media storage</string>
    <string name="empty_media_storage_info">0 MB used</string>
    <string name="general">General</string>
    <string name="login_sessions">Login sessions</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="advanced_settings">Advanced settings</string>
    <string name="clear_cache_and_reload">Clear cache and reload</string>
    <string name="switch_user">Switch User</string>
    <string name="failed_to_read_qr_code">Failed to read QR code</string>
    <string name="scan_with_one_of_devices_message">Scan QR code with one of your devices to finish verification</string>
    <string name="waiting_for_other_device_verification">Waiting for other device to start verification</string>
    <string name="session_verified">Session verified</string>
    <string name="verification_canceled">Verification canceled</string>
    <string name="price_format">Price: %s</string>
    <string name="duration_format">Duration: %s</string>
    <string name="purchase_time_format">Purchase time: %s</string>
    <string name="product_id_format">Product id: %s</string>
    <string name="is_auto_renew_message">Subscription will renew automatically</string>
    <string name="is_not_auto_renew_message">Subscription will not renew automatically</string>
    <string name="can_not_open_google_play">Can not open Google Play</string>
    <string name="profile_updated">Profile updated</string>
    <string name="developer_mode">Developer mode</string>
    <string name="media_usage_format">%1$s of %2$s used</string>
    <string name="no_info_available">No info available</string>
    <string name="log_out_message">Are you sure you want to log out?</string>
    <string name="switch_user_message">Are you sure you want to switch user?</string>
    <string name="switch_str">Switch</string>
    <string name="remove_session">Remove session</string>
    <string name="remove_session_message">In order to sign out from this session you should confirm your auth.</string>
    <string name="reset_keys_message">Confirm auth to reset keys and enable cross signing</string>
    <string name="will_be_accessible_through_option_on_settings_screen">Will be accessible through option on Settings screen</string>
    <string name="all_timeline_events_and_data_will_be_visible_in_timeline">All timeline events and data will be visible in timeline</string>
    <string name="email_added">Email added</string>
    <string name="email_removed">Email removed</string>
    <string name="remove_email">Remove email</string>
    <string name="remove_email_confirmation">Are you sure you want to remove this email address? Email is required for account recovery.</string>
    <string name="my_profile">My Profile</string>
    <string name="ignored_users_empty_message">Ignored users will be shown here</string>
    <string name="people_i_m_following">People I\'m following</string>
    <string name="my_followers">My followers</string>
    <string name="other_known_users">Other known users</string>
    <string name="personal_info">Personal Info</string>
    <string name="notifications">Notifications</string>
    <string name="manage_notifications">Manage notifications</string>
    <string name="app_settings">App settings</string>
    <string name="ignored_users">Ignored users</string>
    <string name="switch_account">Switch account</string>
    <string name="support">Support</string>
    <string name="change_log">Change log</string>
    <string name="about">About</string>
    <string name="zero">0</string>

</resources>