<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:navigationIcon="?attr/homeAsUpIndicator"
        app:navigationIconTint="@color/grey_cool_1100"
        app:title="@string/advanced_settings"
        app:titleCentered="true"
        app:titleTextAppearance="@style/DialogFragmentToolbarTitle" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/lDevMode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:paddingHorizontal="16dp">

        <TextView
            android:id="@+id/tvDevMode"
            style="@style/settingMenuItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:clickable="false"
            android:drawablePadding="8dp"
            android:focusable="false"
            android:gravity="center_vertical"
            android:paddingVertical="16dp"
            android:text="@string/developer_mode"
            app:drawableStartCompat="@drawable/ic_phone"
            app:drawableTint="@color/grey_cool_900"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvDevModeDescription"
            style="@style/Footnote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@null"
            android:clickable="false"
            android:focusable="false"
            android:text="@string/all_timeline_events_and_data_will_be_visible_in_timeline"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDevMode" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/svDevMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:focusable="false"
            app:layout_constraintBottom_toBottomOf="@id/tvDevMode"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvDevMode" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_height"
        android:background="@color/divider_color" />


    <org.futo.circles.core.view.SettingsMenuItemView
        android:id="@+id/tvClearCache"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="16dp"
        android:paddingEnd="8dp"
        app:hasDivider="false"
        app:optionIcon="@drawable/ic_reload"
        app:optionName="@string/clear_cache_and_reload" />

</LinearLayout>