<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/my_profile"
        app:titleCentered="true"
        app:titleMarginEnd="72dp"
        app:titleTextAppearance="@style/DialogFragmentToolbarTitle">


        <ImageView
            android:id="@+id/btnSettings"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="end"
            android:layout_marginEnd="18dp"
            android:background="?selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:padding="6dp"
            android:src="@drawable/ic_settings" />

    </com.google.android.material.appbar.MaterialToolbar>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ivProfile"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="14dp"
        android:background="?selectableItemBackgroundBorderless"
        android:clickable="true"
        android:focusable="true"
        android:padding="2dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.RoundIcon"
        tools:src="@color/blue" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ivEditIcon"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:background="@color/white"
        android:foreground="?selectableItemBackgroundBorderless"
        android:clickable="true"
        android:focusable="true"
        android:padding="2dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_edit"
        app:contentPadding="8dp"
        app:layout_constraintBottom_toBottomOf="@id/ivProfile"
        app:layout_constraintEnd_toEndOf="@id/ivProfile"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.RoundIcon"
        app:strokeColor="@color/grey_cool_300"
        app:strokeWidth="0.8dp"
        app:tint="@color/grey_cool_900" />


    <TextView
        android:id="@+id/tvUserName"
        style="@style/DialogFragmentToolbarTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="14dp"
        android:ellipsize="end"
        android:gravity="center"
        android:lines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivProfile"
        tools:text="Darrell Steward" />

    <TextView
        android:id="@+id/tvUserId"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="8dp"
        android:ellipsize="end"
        android:fontFamily="@font/nunito_semibold"
        android:gravity="center"
        android:lines="1"
        android:textColor="@color/grey_cool_900"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvUserName"
        tools:text="darrel1:us.circles.net" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnEditProfile"
        style="@style/TransparentButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/inter_medium"
        android:paddingHorizontal="12dp"
        android:paddingVertical="8dp"
        android:text="@string/edit_profile"
        android:textAllCaps="false"
        android:textColor="@color/primary"
        android:textSize="14sp"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUserId"
        app:strokeColor="@color/primary"
        app:strokeWidth="1dp" />


    <org.futo.circles.settings.view.PeopleCategoriesView
        android:id="@+id/vPeopleCategories"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnEditProfile" />

    <TextView
        android:id="@+id/tvCategoryHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/nunito_medium"
        android:paddingVertical="8dp"
        android:text="@string/people_i_m_following"
        android:textColor="@color/grey_cool_800"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vPeopleCategories" />

    <org.futo.circles.core.view.LoadingRecyclerView
        android:id="@+id/rvUsers"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingVertical="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCategoryHeader" />

</androidx.constraintlayout.widget.ConstraintLayout>